(PC-36175)[PRO] fix: Tag DS Component font + alignement in status cell

--- a/pro/src/design-system/Tag/Tag.module.scss
+++ b/pro/src/design-system/Tag/Tag.module.scss
@@ -2,7 +2,7 @@
 @use "styles/mixins/_rem.scss" as rem;
 
 .tag {
-  @include fonts.body-xs;
+  @include fonts.body-accent-xs;
 
   display: flex;
   padding: rem.torem(2px) rem.torem(4px);
